Tipo de ficheiro+ arreglos varios